--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "dayjs": "^1.11.9",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
